[flake8]
# References:
#   https://flake8.readthedocs.io/en/latest/user/configuration.html
#   https://flake8.readthedocs.io/en/latest/user/error-codes.html
#   https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
#   https://gitlab.com/pycqa/flake8-docstrings
max-line-length = 88
max-complexity = 19
docstring-convention = numpy
select = C,D,E,F,W,B,B950
ignore =
    # E203: whitespace before ':'
    E203,
    # E226: missing whitespace around arithmetic operator
    E226,
    # E231: missing whitespace after ',', ';', or ':'
    E231,
    # E402: module level imports on one line
    E402,
    # E501: line too long
    E501,
    # E731: do not assign a lambda expression, use a def
    E731,
    # W503: line break before binary operator
    W503,
    # W504: line break after binary operator
    W504
exclude =
    .eggs
    build

[metadata]
author = GeoVista Devs
author_email = geovista.git@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Atmospheric Science
description = Cartographic rendering and mesh analytics powered by PyVista
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    cartography
    earth-science
    mesh
    pyvista
    ugrid
    vtk
license = BSD 3-Clause License
license_file = LICENSE
name = geovista
project_urls =
    Code = https://github.com/bjlittle/geovista
    Issues = https://github.com/bjlittle/geovista/issues
url = https://github.com/bjlittle/geovista
version = attr: geovista.__version__

[options]
include_package_data = True
install_requires =
    cartopy>=0.20
    pooch
    pyproj>=3.3
    pyvista
    pyvistaqt
    vtk>=9
package_dir =
    =lib
packages = find:
python_requires =
    >=3.8
zip_safe = False

[options.extras_require]
cmap =
    cmocean
    colorcet
dev =
    pre-commit
test =
    pytest>=6.0

[options.packages.find]
where = lib

[tool:pytest]
testpaths =
    lib/geovista/
addopts =
    -ra
    -v
    --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS NUMBER
